endpoints for frontend edit
